JDK 21
[skip ci]